--- a/public/style.css
+++ b/public/style.css
@@ -111,6 +111,14 @@ code {
 /* ******************** HOME ******************** */
 
 /* This is responsible for the fade on the Home component */
+
+.home {
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
+}
+
 .home__row {
     display: flex;
     z-index: 1;
