--- a/public/style.css
+++ b/public/style.css
@@ -207,7 +207,7 @@ code {
     height: max-content;
 }
 
-.checkout__add {
+.checkout__ad {
     width: 100%;
     margin-bottom: 10px;
 }
@@ -225,6 +225,14 @@ code {
 /* ************************************************ */
 
 
+/* **************** CHECKOUT PRODUCT ************** */
+
+
+/* ************************************************ */
+/* ************************************************ */
+/* **************** CHECKOUT PRODUCT ************** */
+/* ************************************************ */
+/* ************************************************ */
 
 
 /* ******************* SUBTOTAL ******************** */
